# fide-dashboard-vscode

./: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  README.md  USAGE.md  ai-config.sample.json  debug-config.json  package-lock.json  package.json  test-ws-server.js
.github/: copilot-instructions.md
backend/: Cargo.toml  README.md
backend/src/: boards.rs  main.rs  projects.rs  templates.rs
backend/templates/esp32/: README.md  board.json
backend/templates/esp32/src/: main.c
backend/templates/motor_sim/: Cargo.toml  README.md  USAGE.md  board.json
backend/templates/motor_sim/src/: config.rs  dlt_format.rs  main.rs  motor.rs  websocket.rs
backend/templates/nrf52840/: README.md  board.json
backend/templates/nrf52840/src/: main.c
backend/templates/rpi_pico/: CMakeLists.txt  README.md  board.json
backend/templates/rpi_pico/src/: main.c
backend/templates/stm32f4/: Makefile  README.md  board.json
backend/templates/stm32f4/src/: main.c
src/: dashboardViewProvider.ts  extension.ts  viewProviders.ts
src/ai-agent/: README.md  aiAgentProvider.ts  webview.css  webview.js
src/components/dlt-core/: WASM_DEMO.md  wasm_demo.wasm
src/dashboard/: webview.css  webview.js
src/dlt-viewer/: README.md  dltViewerProvider.ts  refer.txt  webview-old.js  webview.css  webview.js
src/dlt-viewer/modules/: README.md  chart-view.js  debug-view.js  dlt-parser.js  register-view.js  service-generator.js  service-parser.js  trace-view.js  websocket-manager.js
src/project-wizard/: projectWizardProvider.ts  webview.css  webview.js
